<!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutResult1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="#555"
                android:textSize="20sp"
                tools:text="Water - Fluoride" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textResult1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/result_top_margin"
                    android:gravity="center_vertical"
                    android:textColor="#444"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    tools:text="15000" />

                <TextView
                    android:id="@+id/textUnit1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="3dp"
                    android:textColor="#444"
                    android:textSize="17sp"
                    tools:text="mg/l" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ddd" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutResult2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textColor="#555"
                android:textSize="20sp"
                tools:text="Water - Fluoride" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textResult2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/result_top_margin"
                    android:gravity="center_vertical"
                    android:textColor="#444"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    tools:text="15000" />

                <TextView
                    android:id="@+id/textUnit2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="3dp"
                    android:textColor="#444"
                    android:textSize="17sp"
                    tools:text="mg/l" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ddd" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutResult3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textColor="#555"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="Water - Fluoride" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textResult3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/result_top_margin"
                    android:gravity="center_vertical"
                    android:textColor="#444"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    tools:text="15000" />

                <TextView
                    android:id="@+id/textUnit3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="3dp"
                    android:textColor="#444"
                    android:textSize="17sp"
                    tools:text="mg/l" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_submit_result"
        style="@style/ActionButton"
        android:layout_above="@id/textEndInstruction"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/result_top_margin"
        android:layout_marginBottom="10dp"
        android:text="@string/submitResult"
        android:theme="?primaryButtonStyle" />

    <org.akvo.caddisfly.widget.HtmlTextView
        android:id="@+id/textEndInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="20dp"
        android:lineSpacingExtra="6dp"
        android:textSize="@dimen/result_note_text_size"
        android:visibility="visible"
        tools:text="@string/clean_deionised" />

</RelativeLayout>
