...
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:content="@{instruction}"
            app:layout_constraintTop_toTopOf="parent" />

        <org.akvo.caddisfly.sensor.cbt.CustomShapeButton
            android:id="@+id/compartments"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/cbt_compartments"
            app:layout_constraintBottom_toTopOf="@id/spacer"
...
